--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": "https://github.com/matthewfleming/aussie-date-formatter",
   "scripts": {
-    "prepublish": "tsc",
+    "build": "tsc",
     "test": "jest"
   }
 }
